# bitcoin-github-stats

./: .gitignore  Cargo.toml  README.md  analyze.py  flake.nix  justfile
.github/workflows/: update-stats.yml
site/: index.html
src/: db.rs  github.rs  main.rs
src/fetch/: commits.rs  issues.rs  mod.rs  pulls.rs  runs.rs
